新文件：    include/CCommunicationByMsgQueue.h 	新文件：    include/CCommunicationNameServer.h 	新文件：    include/CConditionVariable.h 	新文件：    include/CEnterCriticalSection.h 	新文件：    include/CEvent.h 	新文件：    include/CExecutiveObject.h 	新文件：    include/CLibExecInitializer.h 	新文件：    include/CMessage.h 	新文件：    include/CMsgLoopManager.h 	新文件：    include/CMsgLoopMgrUsingUsrDefQueue.h 	新文件：    include/CMsgObserver.h 	新文件：    include/CMutex.h 	新文件：    include/CMutexByPThread.h 	新文件：    include/CMutexByRecordLocking.h 	新文件：    include/CMutexByRecordLockingAndPThread.h 	新文件：    include/CMutexInterface.h 	新文件：    include/CProcess.h 	新文件：    include/CStatus.h 	新文件：    include/CThread.h 	新文件：    include/CThreadInitFinishedNotifier.h 	新文件：    include/CThreadUsingMsgLoop.h 	新文件：    include/CUseMsgLoopWithoutThread.h 	新文件：    include/CUsrBizForProcess.h 	新文件：    include/CUsrBizUsingMsgLoop.h 	新文件：    include/CUsrDefMsgQueue.h 	新文件：    include/ICommunicationObject.h 	新文件：    include/IInitFinishedNotifier.h 	新文件：    include/IUsrBizForExecObj.h 	新文件：    include/LibHeadFileAllInOne.h 	新文件：    include/MessageIDTable.h 	修改：      makefile 	新文件：    src/CExecutiveObject.cpp 	新文件：    src/CLibEexecInitializer.cpp 	修改：      src/CMutex.cpp 	新文件：    src/CMutexByPThread.cpp 	新文件：    src/CMutexByRecordLocking.cpp 	新文件：    src/CMutexByRecordLocking.h 	新文件：    src/CMutexByRecordLockingAndPThread.cpp 	新文件：    src/CMutexInterface.cpp 	新文件：    src/CProcess.cpp 	新文件：    src/CStatus.cpp 	新文件：    src/CUsrBizForProcess.cpp 	新文件：    src/IUsrBizForExecObj.cpp 	新文件：    src/LibHeadFileAllInOne.h 	新文件：    src/a.out 	新文件：    src/tags 	新文件：    src/test.cpp 	新文件：    src/test/a.out 	新文件：    src/test/main.cpp 	修改：      tags
 尚未暂存以备提交的变更：
   （使用 "git add/rm <file>..." 更新要提交的内容）
   （使用 "git checkout -- <file>..." 丢弃工作区的改动）

	删除：      CEnterCriticalSection.cpp
	删除：      CEnterCriticalSection.h
	删除：      CEvent.cpp
	删除：      CEvent.h
	删除：      CExecutiveObject.cpp
	删除：      CExecutiveObject.h
	删除：      CLLibExecutiveInitial

--- a/CodeTestZone/10_Process/makefile
+++ b/CodeTestZone/10_Process/makefile
@@ -1,5 +1,5 @@
-a.out : *.cpp
-	g++ *.cpp -lpthread -L./lib -lThreadCntl -g
+a.out : ./src/*.cpp
+	g++ ./src/*.cpp -lpthread -I./include  -g
 	rm -rf *.o
 clean:
 	rm -rf *.out
